@@ -14,6 +14,7 @@ Date:
 Bug Fixes:
 
 CAY-2364 Wrong logging in SQLTemplate
+CAY-2365 SQLExec query tries to convert (unexpected) result set into objects
 
 ----------------------------------
 Release: 4.0.B2
